--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@ What started as a local passion project has evolved into a leading rental servic
     <string name="cancel">Cancel</string>
     <string name="selectDates">Select Dates</string>
     <string name="rememberMe">Remember me</string>
+    <string name="no_rental_message">No rental history yet!</string>
+    <string name="error_msg">Something went wrong</string>
 </resources>
