--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@ What started as a local passion project has evolved into a leading rental servic
     <string name="contact">Contact Details</string>
     <string name="phone">+30 210 12345</string>
     <string name="email_flexdrive">support@flexDrive</string>
-    <string name="location">Athens</string>
+    <string name="location">Str. 15, Athens</string>
     <string name="totalPrice">Total Price</string>
     <string name="rentNow">RENT NOW</string>
     <string name="ok">OK</string>
